--- a/Dx11ComputeParticle/Dx11ComputeParticle.vcxproj.filters
+++ b/Dx11ComputeParticle/Dx11ComputeParticle.vcxproj.filters
@@ -22,6 +22,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Dx11ComputeParticle_TemporaryKey.pfx" />
+    <None Include="Shaders\Vertex.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
