--- a/Dx11ComputeParticle/Dx11ComputeParticle.vcxproj.filters
+++ b/Dx11ComputeParticle/Dx11ComputeParticle.vcxproj.filters
@@ -22,9 +22,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Dx11ComputeParticle_TemporaryKey.pfx" />
-    <None Include="Shaders\Vertex.hlsli">
-      <Filter>Shaders</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
@@ -48,7 +45,7 @@
     <FxCompile Include="Shaders\PS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="Shaders\ParticleCS.hlsl">
+    <FxCompile Include="Shaders\CS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
