--- a/Dx11ComputeParticle/Dx11ComputeParticle.vcxproj
+++ b/Dx11ComputeParticle/Dx11ComputeParticle.vcxproj
@@ -83,11 +83,52 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Assets\LargeTile.scale-100.png" />
+    <Image Include="Assets\LargeTile.scale-125.png" />
+    <Image Include="Assets\LargeTile.scale-150.png" />
+    <Image Include="Assets\LargeTile.scale-200.png" />
+    <Image Include="Assets\LargeTile.scale-400.png" />
     <Image Include="Assets\Logo.scale-100.png" />
+    <Image Include="Assets\Logo.scale-125.png" />
+    <Image Include="Assets\Logo.scale-150.png" />
+    <Image Include="Assets\Logo.scale-200.png" />
+    <Image Include="Assets\Logo.scale-400.png" />
+    <Image Include="Assets\SmallLogo.altform-unplated_targetsize-16.png" />
+    <Image Include="Assets\SmallLogo.altform-unplated_targetsize-24.png" />
+    <Image Include="Assets\SmallLogo.altform-unplated_targetsize-256.png" />
+    <Image Include="Assets\SmallLogo.altform-unplated_targetsize-32.png" />
+    <Image Include="Assets\SmallLogo.altform-unplated_targetsize-48.png" />
     <Image Include="Assets\SmallLogo.scale-100.png" />
+    <Image Include="Assets\SmallLogo.scale-125.png" />
+    <Image Include="Assets\SmallLogo.scale-150.png" />
+    <Image Include="Assets\SmallLogo.scale-200.png" />
+    <Image Include="Assets\SmallLogo.scale-400.png" />
+    <Image Include="Assets\SmallLogo.targetsize-16.png" />
+    <Image Include="Assets\SmallLogo.targetsize-24.png" />
+    <Image Include="Assets\SmallLogo.targetsize-256.png" />
+    <Image Include="Assets\SmallLogo.targetsize-32.png" />
+    <Image Include="Assets\SmallLogo.targetsize-48.png" />
+    <Image Include="Assets\SmallTile.scale-100.png" />
+    <Image Include="Assets\SmallTile.scale-125.png" />
+    <Image Include="Assets\SmallTile.scale-150.png" />
+    <Image Include="Assets\SmallTile.scale-200.png" />
+    <Image Include="Assets\SmallTile.scale-400.png" />
+    <Image Include="Assets\SplashScreen.scale-125.png" />
+    <Image Include="Assets\SplashScreen.scale-150.png" />
+    <Image Include="Assets\SplashScreen.scale-200.png" />
+    <Image Include="Assets\SplashScreen.scale-400.png" />
     <Image Include="Assets\StoreLogo.scale-100.png" />
     <Image Include="Assets\SplashScreen.scale-100.png" />
+    <Image Include="Assets\StoreLogo.scale-125.png" />
+    <Image Include="Assets\StoreLogo.scale-150.png" />
+    <Image Include="Assets\StoreLogo.scale-200.png" />
+    <Image Include="Assets\StoreLogo.scale-400.png" />
     <Image Include="Assets\WideLogo.scale-100.png" />
+    <Image Include="Assets\WideTile.scale-100.png" />
+    <Image Include="Assets\WideTile.scale-125.png" />
+    <Image Include="Assets\WideTile.scale-150.png" />
+    <Image Include="Assets\WideTile.scale-200.png" />
+    <Image Include="Assets\WideTile.scale-400.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Dx11ComputeParticle_TemporaryKey.pfx" />
